# ChangeLog for dev-util/mbfl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mbfl-1.3_beta5 (08 Apr 2011)

  08 Apr 2011; Justin Lecher <jlec@gentoo.org> +mbfl-1.3_beta5.ebuild,
  +metadata.xml:
  New Addition
