@@ -1,14 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST mbfl-1.3b5-src.tar.bz2 214487 RMD160 2d213086cf56e964ef4ac54aa85b9b32b9b350b6 SHA1 aa50eba3fc7465ae741402202ce59ec22ee5daff SHA256 5ded9a458da8f1361f8dbad5cc5160b723bc6ac674caf9496c4be496a27ce7ae
-EBUILD mbfl-1.3_beta5.ebuild 739 RMD160 f5bcdec16816afa759dcd7a02b59754ccdccb534 SHA1 c8ed00666b2aa216f43cc92db20b382e668496dc SHA256 9c5f589a6135b0bd4a49814f533c2f00afdd3d8c686e33d98b28c36b53246826
-MISC ChangeLog 249 RMD160 0a58dc29377c03b94f15e68e8ca04875f0109a4f SHA1 ea3e5353439742f7ef096da92a3d75a478ce92b9 SHA256 34d80c669351f7ec9f59de228a07cc4c903f49f3444e8c3ff6a67a4949c4118a
-MISC metadata.xml 443 RMD160 04db3f1404757ae501f7c73229f2e09b39a76d06 SHA1 8062db8ff348421c57ec22af5f7866986260c1cd SHA256 1e59781b901222bb9085be1ec7a3d910fc8958bc6067b93a8e3770d4f840c2e9
+DIST mbfl-1.3b5-src.tar.bz2 214487 SHA256 5ded9a458da8f1361f8dbad5cc5160b723bc6ac674caf9496c4be496a27ce7ae
+EBUILD mbfl-1.3_beta5.ebuild 728 SHA256 1ff7db3cb298e20f9f2ae3e118ce19d425de708252345db8965d833d44bcbabf SHA512 d7b045de78074bb8765dcfeb508fa70b8a8e34a3ebe5e89ab523f5d8b2e75326aacb044d4c0e01079b011b2f8d8fdd0e49780ddbd00238a100dc3ffb0f6b13a3 WHIRLPOOL 098f017101fd1cab6eaa5964faa530d8b6cf45ab4b3794e25e247794b3f7e5ee57a57133ea8cfa9556302cf1a9529848cfc14029fe1d295060d41d5ccf436395
+MISC ChangeLog 376 SHA256 5281acd9030545953044f46a1f0aa4d914be096d4554a7e722dc76a2af5fed20 SHA512 383e8b16aa8bef68e2427a0db51c9525c6c787e0162a7f17f737598972aa4a1cb90fc2a69f2c39841cb3740e9385506cdd038f055704fcc95099c1fb892736a8 WHIRLPOOL 5e01d5e6f1bf6053643434b6cfcf97e2b7ac0f401d6828e0dd30f963059a336d22af35474c4038f6b70a360b3fd24a2f1a50a119b16bd4d7150c1236f6030fe2
+MISC metadata.xml 420 SHA256 b5cc1ae29abb0409b672bf1d68ab4d6b99744047f07e6e6d46d960bc2a2e085c SHA512 a030bf6ebe3ea69cdc7b39498caf3c98df7e47e639e366f4d6cea226ed417345cd8e44af8296adf963fc77994ca852a7454e7d5aaee8a13370dfe47ede052ba5 WHIRLPOOL f2452224d86739056bf14d3752e09883c4ba3c07b9bbf126a26f3ae2c812aa9ff26f8df3e06307c7821bbe4c0c4ce55f2e284a599bd8802716eecc84155a9dfd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEARECAAYFAk2eqE8ACgkQgAnW8HDreRZNkgCgx6oGdcHC6S1Qj2V7oWQYQSNJ
-SCQAoJ/nz2YZf4S0ju6QRWMmsecHMWkd
-=TZrB
+iEYEAREIAAYFAlAnYKIACgkQgAnW8HDreRZUigCfcREJSyIwPscppwlFZTI8xdHL
+/+UAn2SD7m/yAe0l9XCx9GpdTzH/xhvx
+=Fn+5
 -----END PGP SIGNATURE-----
