@@ -1,24 +1,22 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI="4"
 
-# inherit
-
 MY_PV="${PV/_beta/b}"
-
 
 DESCRIPTION="Marco's Bash Functions Library"
 HOMEPAGE="http://gna.org/projects/mbfl/"
 SRC_URI="http://download.gna.org/mbfl/${MY_PV}/${PN}-${MY_PV}-src.tar.bz2"
 
+LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
-LICENSE="LGPL-2.1"
 IUSE="doc emacs sudo"
 
 S="${WORKDIR}"/${PN}-${MY_PV}
+
 MAKEOPTS+=" -j1"
 
 src_configure() {
