@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
 	<maintainer>
 		<email>jlec@j-schmitz.net</email>
 		<name>Justin Lecher (jlec)</name>
@@ -11,7 +10,6 @@
 		<name>Johann Schmitz</name>
 	</maintainer>
 	<use>
-		<flag name='sudo'>use sudo when invoking abi and abu rules</flag>
+		<flag name="sudo">use sudo when invoking abi and abu rules</flag>
 	</use>
 </pkgmetadata>
-
