@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/mbfl
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Aug 2012; Justin Lecher <jlec@gentoo.org> mbfl-1.3_beta5.ebuild,
+  metadata.xml:
+  Remove useless blank line on line: 11
 
 *mbfl-1.3_beta5 (08 Apr 2011)
 
